fix: 🎨 objkt info alignment

--- a/src/components/listings/index.module.scss
+++ b/src/components/listings/index.module.scss
@@ -17,7 +17,6 @@
   display: flex;
   flex-direction: column;
   color: var(--text-color);
-  margin: 0 1em;
 
   .swap {
     display: flex;
